get a good performance on ECG200 using fine-tuned VGG16

--- a/ECG-identification/old/timeseries-VGG.ipynb
+++ b/ECG-identification/old/timeseries-VGG.ipynb
@@ -146,14 +146,12 @@
     "    dense_2 = Dense(128,name='dense_2',activation='relu')(d1)\n",
     "    d2 = Dropout(0.5)(dense_2)\n",
     "\n",
-    "\n",
     "    dense_3 = Dense(2,name='dense_3')(d1)\n",
     "    prediction = Activation(\"softmax\",name=\"softmax\")(dense_3)\n",
     "\n",
     "    model1 = Model(input=model.layers[0].input, output=prediction)\n",
     "\n",
-    "\n",
-    "    model1.compile(optimizer=adam, loss='categorical_crossentropy', metrics = ['accuracy'])\n",
+    "    model1.compile(optimizer=adam, loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "    \n",
     "    return model1\n",
     "\n"
@@ -268,7 +266,7 @@
     "        x_te=mtf.transform(x_test)\n",
     "        print(\"apply mtf\")\n",
     "    else:\n",
-    "        rp=RecurrencePlots(dimension=3,epsilon='percentage_points',percentage=10)\n",
+    "        rp=RecurrencePlots(dimension=3, epsilon='percentage_points',percentage=10)\n",
     "        x_tr=rp.transform(x_train)\n",
     "        x_te=rp.transform(x_test)\n",
     "        print(\"apply rp\")\n",
@@ -316,7 +314,7 @@
     "    model=rebuildModel()\n",
     "    \n",
     "    hist = model.fit(x_train, Y_train, batch_size=batch_size, nb_epoch=epoch,\n",
-    "              verbose=2, validation_data=(x_test, Y_test))\n",
+    "                     verbose=2, validation_data=(x_test, Y_test))\n",
     "    \n",
     "    plt.plot(hist.history['acc'])\n",
     "    plt.plot(hist.history['val_acc'])\n",
@@ -333,10 +331,8 @@
     "    plt.xlabel('epoch')\n",
     "    plt.legend(['train', 'test'], loc='upper left')\n",
     "    plt.show()\n",
-    "    \n",
-    "    \n",
-    "    return hist\n",
-    "    \n"
+    "     \n",
+    "    return hist"
    ]
   },
   {
